[package]
name = "offst-secure-channel"
version = "0.1.0"
authors = ["real <real@freedomlayer.org>"]

edition = "2018"

[dependencies]

utils = { path = "../utils", version = "0.1.0", package = "offst-utils" }
crypto = { path = "../crypto", version = "0.1.0", package = "offst-crypto" }
identity = { path = "../identity", version = "0.1.0" , package = "offst-identity"}
timer = { path = "../timer", version = "0.1.0" , package = "offst-timer" }
proto = { path = "../proto", version = "0.1.0" , package = "offst-proto" }

log = "0.4"
pretty_env_logger = "0.2"

# futures-preview = "0.3.0-alpha.9"
futures-preview = { git = "https://github.com/rust-lang-nursery/futures-rs", rev = "5d87cce202" }

# futures = "0.1.25"
# tokio-core = "0.1"
# futures-await = "0.1"
byteorder = "1.1"


