[package]
name = "offst-secure-channel"
version = "0.1.0"
authors = ["real <real@freedomlayer.org>"]

edition = "2018"

[dependencies]

common = { path = "../common", version = "0.1.0", package = "offst-common" }
crypto = { path = "../crypto", version = "0.1.0", package = "offst-crypto" }
identity = { path = "../identity", version = "0.1.0" , package = "offst-identity"}
timer = { path = "../timer", version = "0.1.0" , package = "offst-timer" }
proto = { path = "../proto", version = "0.1.0" , package = "offst-proto" }

log = "0.4"
pretty_env_logger = "0.2"

futures-preview = "0.3.0-alpha.10"

byteorder = "1.1"


