[package]
name = "offset-secure-channel"
version = "0.1.0"
authors = ["real <real@freedomlayer.org>"]
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]

common = { path = "../common", version = "0.1.0", package = "offset-common" }
crypto = { path = "../crypto", version = "0.1.0", package = "offset-crypto" }
identity = { path = "../identity", version = "0.1.0" , package = "offset-identity"}
timer = { path = "../timer", version = "0.1.0" , package = "offset-timer" }
proto = { path = "../proto", version = "0.1.0" , package = "offset-proto" }

log = "0.4"
pretty_env_logger = "0.2"
derive_more = "0.15.0"

futures = "0.3.1"

byteorder = "1.1"

[dev-dependencies]

futures = {version = "0.3.1", features = ["thread-pool"]}


