[package]
name = "offst-stcompact"
version = "0.1.0"
authors = ["real <real@freedomlayer.org>"]
license = "AGPL-3.0"
edition = "2018"

[lib]
name = "stcompact"
path = "src/lib.rs"

[[bin]]
name = "stcompact"
path = "src/bin/stcompact.rs"

[dependencies]

common = { path = "../common", version = "0.1.0", package = "offst-common" }
timer = { path = "../timer", version = "0.1.0", package = "offst-timer" }
crypto = { path = "../crypto", version = "0.1.0", package = "offst-crypto" }
lockfile = { path = "../lockfile", version = "0.1.0", package = "offst-lockfile" }
proto = { path = "../proto", version = "0.1.0" , package = "offst-proto" }
route = { path = "../route", version = "0.1.0", package = "offst-route" }
database = { path = "../database", version = "0.1.0", package = "offst-database" }
identity = { path = "../identity", version = "0.1.0", package = "offst-identity" }
node = { path = "../node", version = "0.1.0" , package = "offst-node" }
net = { path = "../net", version = "0.1.0", package = "offst-net" }
connection = { path = "../connection", version = "0.1.0", package = "offst-connection" }
app = { path = "../app", version = "0.1.0", package = "offst-app" }
app_client = { path = "../app_client", version = "0.1.0", package = "offst-app-client" }

serde = {version = "1.0.104", features = ["derive"]}

base64 = "0.10.1"

log = "0.4"
env_logger = "0.6.0"
futures = {version = "0.3.1", features = ["thread-pool"]}
async-std = "1.2.0"

structopt = "0.2.15"

derive_more = "0.99.2"
serde_json = "1.0.44"

# Quickcheck:
quickcheck = {version = "0.8"}
quickcheck_macros = {version = "0.8"}
quickcheck_derive = {version = "0.2.1"}
rand = {version = "0.7.2"}

[dev-dependencies]

tempfile = "3.0.5"
