[package]
name = "offset-stcompact"
version = "0.1.0"
authors = ["real <real@freedomlayer.org>"]
license = "AGPL-3.0"
edition = "2018"

[lib]
name = "stcompact"
path = "src/lib.rs"

[[bin]]
name = "stcompact"
path = "src/bin/stcompact.rs"

[[bin]]
name = "stcompact_ser_gen"
path = "src/bin/stcompact_ser_gen.rs"

[dependencies]

common = { path = "../common", version = "0.1.0", package = "offset-common" }
timer = { path = "../timer", version = "0.1.0", package = "offset-timer" }
crypto = { path = "../crypto", version = "0.1.0", package = "offset-crypto" }
lockfile = { path = "../lockfile", version = "0.1.0", package = "offset-lockfile" }
proto = { path = "../proto", version = "0.1.0" , package = "offset-proto" }
route = { path = "../route", version = "0.1.0", package = "offset-route" }
database = { path = "../database", version = "0.1.0", package = "offset-database" }
identity = { path = "../identity", version = "0.1.0", package = "offset-identity" }
node = { path = "../node", version = "0.1.0" , package = "offset-node" }
net = { path = "../net", version = "0.1.0", package = "offset-net" }
connection = { path = "../connection", version = "0.1.0", package = "offset-connection" }
app = { path = "../app", version = "0.1.0", package = "offset-app" }
app_client = { path = "../app_client", version = "0.1.0", package = "offset-app-client" }

serde = {version = "1.0.104", features = ["derive"]}

base64 = "0.10.1"

log = "0.4"
env_logger = "0.6.0"
futures = {version = "0.3.1", features = ["thread-pool"]}
async-std = "1.2.0"

structopt = "0.2.15"

derive_more = "0.99.2"
serde_json = "1.0.44"

# Quickcheck:
quickcheck = {version = "0.9"}
quickcheck_macros = {version = "0.8"}
quickcheck_derive = {version = "0.2.1"}
rand = {version = "0.7.2"}

[dev-dependencies]

tempfile = "3.1.0"
