[package]
name = "offst-stctrl"
version = "0.1.0"
authors = ["real <real@freedomlayer.org>"]
edition = "2018"


[lib]
name = "stctrl"
path = "src/lib.rs"

[[bin]]
name = "stctrl"
path = "src/bin/stctrl.rs"

[[bin]]
name = "stregister"
path = "src/bin/stregister.rs"

[dependencies]

app = { path = "../app", version = "0.1.0", package = "offst-app" }

log = "0.4"
# simple_logger = "1.0.1"
env_logger = "0.6.0"
futures-preview = "0.3.0-alpha.13"
prettytable-rs = "0.8.0"

serde = "1"
serde_derive = "1"

toml = "0.4.10"

structopt = "0.2.15"

derive_more = "0.14.0"

[dev_dependencies]

tempfile = "3.0.5"
