[package]
name = "offst-stctrl"
version = "0.1.0"
authors = ["real <real@freedomlayer.org>"]
license = "AGPL-3.0"
edition = "2018"


[lib]
name = "stctrl"
path = "src/lib.rs"

[[bin]]
name = "stctrl"
path = "src/bin/stctrl.rs"

[[bin]]
name = "stverify"
path = "src/bin/stverify.rs"

[dependencies]

route = { path = "../route", version = "0.1.0", package = "offst-route" }
app = { path = "../app", version = "0.1.0", package = "offst-app" }
offst-mutual-from = { path = "../mutual_from", version = "0.1.0"}

log = "0.4"

env_logger = "0.6.0"
futures = {version = "0.3.1", features = ["thread-pool"]}
prettytable-rs = "0.8.0"

serde = {version = "1.0.104", features = ["derive"]}

structopt = "0.2.15"

derive_more = "0.14.0"

# Quickcheck:
quickcheck = {version = "0.9"}
quickcheck_macros = {version = "0.8"}
quickcheck_derive = {version = "0.2.1"}
rand = {version = "0.7.2"}

[dev_dependencies]

tempfile = "3.1.0"

