[package]
name = "offst-stwebpay"
version = "0.1.0"
authors = ["real <real@freedomlayer.org>"]
license = "AGPL-3.0"
edition = "2018"


[lib]
name = "stwebpay"
path = "src/lib.rs"

[[bin]]
name = "stwebpay"
path = "src/bin/stwebpay.rs"

[dependencies]

app = { path = "../app", version = "0.1.0", package = "offst-app" }

log = "0.4"

env_logger = "0.6.0"
futures-preview = "0.3.0-alpha.16"

serde = "1"
serde_derive = "1"

structopt = "0.2.15"

derive_more = "0.14.0"

num-bigint = "0.2.2"
num-traits = "0.2.6"

[dev_dependencies]

tempfile = "3.0.5"
