[package]
name = "offst-test"
version = "0.1.0"
authors = ["real <real@freedomlayer.org>"]
license = "AGPL-3.0"
edition = "2018"

[dependencies]

common = { path = "../common", version = "0.1.0", package = "offst-common" }
crypto = { path = "../crypto", version = "0.1.0", package = "offst-crypto" }
identity = { path = "../identity", version = "0.1.0" , package = "offst-identity" }
timer = { path = "../timer", version = "0.1.0" , package = "offst-timer" }
proto = { path = "../proto", version = "0.1.0" , package = "offst-proto" }
relay = { path = "../relay", version = "0.1.0" , package = "offst-relay" }
net = { path = "../net", version = "0.1.0" , package = "offst-net" }
index_server = { path = "../index_server", version = "0.1.0" , package = "offst-index-server" }
node = { path = "../node", version = "0.1.0" , package = "offst-node" }
database = { path = "../database", version = "0.1.0" , package = "offst-database" }
bin = { path = "../bin", version = "0.1.0" , package = "offst-bin" }
stctrl = { path = "../stctrl", version = "0.1.0" , package = "offst-stctrl" }
app = { path = "../app", version = "0.1.0" , package = "offst-app" }

# futures-preview = {version = "0.3.0-alpha.16", features = ["compat"] }
# futures-test-preview = {version = "0.3.0-alpha.16"}
futures = "0.3.1"

log = "0.4"

[dev-dependencies]

tempfile = "3.0.5"
env_logger = "0.6.0"

futures = {version = "0.3.1", features = ["thread-pool"]}
