[package]
name = "offst-test"
version = "0.1.0"
authors = ["real <real@freedomlayer.org>"]
license = "AGPL-3.0"
edition = "2018"

[dependencies]

common = { path = "../common", version = "0.1.0", package = "offst-common" }
funder = { path = "../funder", version = "0.1.0", package = "offst-funder" }
crypto = { path = "../crypto", version = "0.1.0", package = "offst-crypto" }
identity = { path = "../identity", version = "0.1.0" , package = "offst-identity" }
timer = { path = "../timer", version = "0.1.0" , package = "offst-timer" }
proto = { path = "../proto", version = "0.1.0" , package = "offst-proto" }
relay = { path = "../relay", version = "0.1.0" , package = "offst-relay" }
net = { path = "../net", version = "0.1.0" , package = "offst-net" }
index_server = { path = "../index_server", version = "0.1.0" , package = "offst-index-server" }
node = { path = "../node", version = "0.1.0" , package = "offst-node" }
database = { path = "../database", version = "0.1.0" , package = "offst-database" }
bin = { path = "../bin", version = "0.1.0" , package = "offst-bin" }
stctrl = { path = "../stctrl", version = "0.1.0" , package = "offst-stctrl" }
stcompact = { path = "../stcompact", version = "0.1.0" , package = "offst-stcompact" }
app = { path = "../app", version = "0.1.0" , package = "offst-app" }
app_client = { path = "../app_client", version = "0.1.0" , package = "offst-app-client" }
connection = { path = "../connection", version = "0.1.0" , package = "offst-connection" }

futures = "0.3.1"

log = "0.4"

[dev-dependencies]

tempfile = "3.1.0"
env_logger = "0.6.0"
serde_json = "1.0.44"

# Quickcheck:
quickcheck = {version = "0.9"}
quickcheck_macros = {version = "0.8"}
rand = {version = "0.7.2"}

futures = {version = "0.3.1", features = ["thread-pool"]}
