[package]
name = "offset-test"
version = "0.1.0"
authors = ["real <real@freedomlayer.org>"]
license = "AGPL-3.0"
edition = "2018"

[dependencies]

common = { path = "../common", version = "0.1.0", package = "offset-common" }
funder = { path = "../funder", version = "0.1.0", package = "offset-funder" }
crypto = { path = "../crypto", version = "0.1.0", package = "offset-crypto" }
identity = { path = "../identity", version = "0.1.0" , package = "offset-identity" }
timer = { path = "../timer", version = "0.1.0" , package = "offset-timer" }
proto = { path = "../proto", version = "0.1.0" , package = "offset-proto" }
relay = { path = "../relay", version = "0.1.0" , package = "offset-relay" }
net = { path = "../net", version = "0.1.0" , package = "offset-net" }
index_server = { path = "../index_server", version = "0.1.0" , package = "offset-index-server" }
node = { path = "../node", version = "0.1.0" , package = "offset-node" }
database = { path = "../database", version = "0.1.0" , package = "offset-database" }
bin = { path = "../bin", version = "0.1.0" , package = "offset-bin" }
stctrl = { path = "../stctrl", version = "0.1.0" , package = "offset-stctrl" }
stcompact = { path = "../stcompact", version = "0.1.0" , package = "offset-stcompact" }
app = { path = "../app", version = "0.1.0" , package = "offset-app" }
app_client = { path = "../app_client", version = "0.1.0" , package = "offset-app-client" }
connection = { path = "../connection", version = "0.1.0" , package = "offset-connection" }

futures = "0.3.1"

log = "0.4"

[dev-dependencies]

tempfile = "3.1.0"
env_logger = "0.6.0"
serde_json = "1.0.44"

# Quickcheck:
quickcheck = {version = "0.9"}
quickcheck_macros = {version = "0.8"}
rand = {version = "0.7.2"}

futures = {version = "0.3.1", features = ["thread-pool"]}
