[package]
name = "offst-timer"
version = "0.1.0"
authors = ["real <real@freedomlayer.org>"]
edition = "2018"

[dependencies]

log = "0.4"

bytes = "0.4"
futures-preview = { version = "0.3.0-alpha.16", features = ["nightly", "async-await"] }

common = { path = "../common", version = "0.1.0", package = "offst-common" }

[dev-dependencies]


