[package]
name = "offst-timer"
version = "0.1.0"
authors = ["real <real@freedomlayer.org>"]
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]

log = "0.4"

bytes = "0.4"
# futures-preview = "0.3.0-alpha.18"
futures = "0.3.1"

common = { path = "../common", version = "0.1.0", package = "offst-common" }

[dev-dependencies]


