[package]
name = "offset-timer"
version = "0.1.0"
authors = ["real <real@freedomlayer.org>"]
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]

log = "0.4"

bytes = "0.5.4"

futures = "0.3.1"

async-std = {version = "1.6.1", features=["unstable"]}

common = { path = "../common", version = "0.1.0", package = "offset-common" }

[dev-dependencies]

futures = {version = "0.3.1", features = ["thread-pool"]}

