[package]
name = "cswitch-utils"
version = "0.1.0"
authors = ["real <real@freedomlayer.org>"]
edition = "2018"

[dependencies]
log = "0.4"

async_mutex = { git = "https://github.com/realcr/async_mutex", rev = "a1d973ed7" }

bytes = "0.4"
# futures-preview = "0.3.0-alpha.7"
# futures-preview = { git = "https://github.com/rust-lang-nursery/futures-rs", rev = "a25e51e", features = ["compat"] }
futures-preview = { version = "0.3.0-alpha.9", features=["compat"]}

tokio-io = "0.1"
tokio-core = "0.1"
tokio-codec = "0.1"
tokio = "0.1"

serde = "1"
byteorder = "1.1"

[dev-dependencies]

