[package]
name = "cswitch-utils"
version = "0.1.0"
authors = ["real <real@freedomlayer.org>"]
edition = "2018"

[dependencies]
log = "0.4"


bytes = "0.4"
futures-preview = { version = "0.3.0-alpha.9", features=["compat"]}

tokio-io = "0.1"
tokio-core = "0.1"
tokio-codec = "0.1"
tokio = "0.1"

serde = "1"
byteorder = "1.1"

[dev-dependencies]

